--- a/django/manager_employees/templates/login.html
+++ b/django/manager_employees/templates/login.html
@@ -3,20 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="">
     <title>Login</title>
 </head>
 <body>
-    <h2>Login</h2>
-    <form method="post" action="{% url 'user_login' %}">
-        {% csrf_token %}
-        <label for="username">Username:</label>
-        <input type="text" name="username" required><br>
-        <label for="password">Password:</label>
-        <input type="password" name="password" required><br>
-        <button type="submit">Login</button>
-    </form>
-    {% if error %}
+    <div class="loginform">
+        <h2>Login</h2>
+        <form method="post" action="{% url 'user_login' %}">
+            {% csrf_token %}
+            <div class="container">
+            <label for="username"><b>Username</b></label>
+            <input type="text" placeholder="Enter Username" name="username" required>
+        
+            <label for="password"><b>Password</b></label>
+            <input type="password" placeholder="Enter Password" name="password" required>
+        
+            <button type="submit">Login</button>
+            </div>
+        
+            <div class="container" style="background-color:#f1f1f1"></div>
+        </form>
+        {% if error %}
         <p style="color: red;">{{ error }}</p>
-    {% endif %}
+        {% endif %}
+    </div>
 </body>
 </html>
