--- a/django/manager_employees/departments/templates/departments/departments_list.html
+++ b/django/manager_employees/departments/templates/departments/departments_list.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
+{% extends 'base.html' %}
 {% load static%}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Department_list</title>
-    <link rel="stylesheet" href="{% static 'css/navigator.css' %}">
+    <link rel="stylesheet" href="{% static 'css/detail-detele-button.css' %}">
 </head>
 <body>
-
-    <header class="header">
-        <div class="header-wrapper">
-            {% csrf_token %}
-    <p class="header-notify">Hi, {{ user.username }}!</p>
-    <form method="post" action="{% url 'user_logout' %}">
-        {% csrf_token %}
-        <button class="header-button" type="submit">Logout</button>
-        </div>
-    </header>
-    <!-- SIDEBAR -->
-    <nav class="sidebar">
-        <ul class="sidebar-list">
-            <li class="sidebar-item">
-                <a class="item-link" href="#">Departments</a>
-            </li>
-            <li class="sidebar-item">
-                <a class="item-link" href="#">Contacts</a>
-            </li>
-            <li class="sidebar-item">
-                <a class="item-link" href="#">Employees</a>
-            </li>
-        </ul>
-    </nav>
+    {% block content %}
+    <h2>Department List</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for department in departments %}
+          <tr>
+            <td>{{ department.name }}</td>
+            <td>
+              <button class="detail-button" href="#">Detail</button>
+              <button class="delete-button" herf="#">Delete</button>
+            </td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  {% endblock %}
 </body>
 
 </html>
