--- a/django/manager_employees/templates/base.html
+++ b/django/manager_employees/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-{% load static%}
+{% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,17 +11,18 @@
 <body>
     <header class="header">
         <div class="header-wrapper">
-        {% csrf_token %}
-        <p class="header-notify">Hi, {{ user.username }}!</p>
-        <form method="post" action="{% url 'user_logout' %}">
-        {% csrf_token %}
-        <button class="header-button" type="submit">Logout</button>
+            {% csrf_token %}
+            <p class="header-notify">Hi, {{ user.username }}!</p>
+            <form method="post" action="{% url 'user_logout' %}">
+                {% csrf_token %}
+                <button class="header-button" type="submit">Logout</button>
+            </form>
         </div>
     </header>
     <!-- SIDEBAR -->
     <nav class="sidebar">
         <ul class="sidebar-list">
-            <li class="sidebar-item">
+            <li class="sidebar-item {% if context.current_page == 'departments_list' %}active{% endif %}">
                 <a class="item-link" href="{% url 'departments_list' %}">Departments</a>
             </li>
             <li class="sidebar-item">
