--- a/django/manager_employees/templates/base.html
+++ b/django/manager_employees/templates/base.html
@@ -22,8 +22,8 @@
     <!-- SIDEBAR -->
     <nav class="sidebar">
         <ul class="sidebar-list">
-            <li class="sidebar-item {% if context.current_page == 'departments_list' %}active{% endif %}">
-                <a class="item-link" href="{% url 'departments_list' %}">Departments</a>
+            <li class="sidebar-item {% if context.current_page == 'departments' %}active{% endif %}">
+                <a class="item-link" href="{% url 'departments' %}">Departments</a>
             </li>
             <li class="sidebar-item">
                 <a class="item-link" href="#">Contacts</a>
