--- a/django/manager_employees/authentication/templates/login.html
+++ b/django/manager_employees/authentication/templates/login.html
@@ -26,10 +26,9 @@
                 <button type="submit">Login</button>
             </div>
         
-            <div class="container" style="background-color:#f1f1f1"></div>
         </form>
         {% if error %}
-        <p style="color: red;">{{ error }}</p>
+        <p class="error">{{ error }}</p>
         {% endif %}
     </div>
 </body>
