Change file path css in list,html

--- a/django/manager_employees/departments/templates/list.html
+++ b/django/manager_employees/departments/templates/list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/detail-detele-button.css' %}">
+<link rel="stylesheet" href="{% static 'css/actions-button.css' %}">
 
 {% block content %}
   <h2>Department List</h2>
