Update block content in base.html

--- a/django/manager_employees/templates/base.html
+++ b/django/manager_employees/templates/base.html
@@ -33,5 +33,9 @@
             </li>
         </ul>
     </nav>
+    <!-- CONTENT-->
+    <div class="content">
+        {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
