Update css for loginform

--- a/django/manager_employees/authentication/static/css/login.css
+++ b/django/manager_employees/authentication/static/css/login.css
@@ -1,46 +1,45 @@
 html,
 .loginform {
-    padding-top: 70px;
-    padding-left: 200px;
-    margin-left: 100px;
-    width: 50%;
+  padding-top: 70px;
+  margin: 0 auto;
+  width: 50%;
 }
 
 form {
-    border: 3px solid #f1f1f1;
-    width: 100%;
+  border: 3px solid #f1f1f1;
+  width: 100%;
 }
 
 .container {
-    padding: 16px;
-    width: auto;
-    background-color:#f1f1f1
+  padding: 16px;
+  width: auto;
+  background-color: #f1f1f1;
 }
 
-input[type=text],
-input[type=password] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
+input[type="text"],
+input[type="password"] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
 }
 
 button {
-    background-color: #04AA6D;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
+  background-color: #04aa6d;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
 }
 
 button:hover {
-    opacity: 0.8;
+  opacity: 0.8;
 }
 
 .error {
-    color: red;
+  color: red;
 }
