--- a/django/manager_employees/static/css/navigator.css
+++ b/django/manager_employees/static/css/navigator.css
@@ -14,19 +14,21 @@ body {
 
 .sidebar-list {
     list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .sidebar-item {
     margin-bottom: 20px;
-    padding: 10px;
-    margin-left: -45px;
+    padding: 10px 0px;
+    margin: 0 auto;
 }
 
 .item-link {
     color: white;
     text-decoration: none;
     margin-bottom: 20px;
-    margin-left: 70px;
 }
 
 .header{
@@ -55,7 +57,11 @@ body {
 .sidebar-item.active {
     background-color: #6c6d6e;
     color: rgb(9, 49, 226);
-    padding: 10px;
-    margin-left: -45px;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
 }
 
+ul{
+    padding: 0;
+}
