--- a/django/manager_employees/static/css/navigator.css
+++ b/django/manager_employees/static/css/navigator.css
@@ -1,67 +1,102 @@
 html,
-body {
-    height: 100%;
-    margin: 0;
+body, 
+ul {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .sidebar {
-    background-color: grey;
-    padding: 16px 0 0;
-    height: 100%;
-    width: 15%;
-    z-index: 600;
+  background-color: grey;
+  height: 100vh;
+  width: 15%;
 }
 
 .sidebar-list {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
 }
 
 .sidebar-item {
-    margin-bottom: 20px;
-    padding: 10px 0px;
-    margin: 0 auto;
+  margin-bottom: 20px;
+  padding: 10px 0px;
+  margin: 0 auto;
 }
 
 .item-link {
-    color: white;
-    text-decoration: none;
-    margin-bottom: 20px;
+  color: white;
+  text-decoration: none;
+  margin-bottom: 20px;
 }
 
-.header{
-    background-color: black;
-    display: flex;
-    justify-content: flex-end;
+.header {
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
-.header-wrapper{
-    display: flex;
-    align-items: center;
+.header-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .header-button {
-    border-radius: 8px;
-    width: 70px;
-    height: 32px;
-    border: none;
-    margin: 0 15px;
+  border-radius: 8px;
+  width: 70px;
+  height: 32px;
+  border: none;
+  margin: 0 15px;
 }
 
-.header-notify{
-    color: white 
+.header-notify {
+  color: white;
+  padding: 0 10px;
 }
 
 .sidebar-item.active {
-    background-color: #6c6d6e;
-    color: rgb(9, 49, 226);
-    width: 100%;
-    margin: 0 auto;
-    text-align: center;
+  background-color: #6c6d6e;
+  color: rgb(9, 49, 226);
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
 }
 
-ul{
-    padding: 0;
+.page-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  align-items: flex-end;
+  padding: 11px;
+}
+
+.page-name {
+  color: black;
+}
+
+.add-button {
+  border-radius: 8px;
+  width: 70px;
+  height: 32px;
+  border: none;
+  margin: 0 15px;
+}
+
+.page-name {
+  font-size: 25px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.container-page {
+  display: flex
+}
+
+.content {
+    width: 100%;
 }
