--- a/django/manager_employees/departments/templates/list.html
+++ b/django/manager_employees/departments/templates/list.html
@@ -5,46 +5,49 @@
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/department.css' %}">
-
-<h2>Department List</h2>
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-
-  <div class="form-new" id="formNew" style="display: none;">
-    <form method="post" action="{% url 'create-department' %}">
-      {% csrf_token %}
-      <h2>New Department</h2>
-      {% if error_message %}
-      <p class="error-message">{{ error_message }}</p>
-      {% endif %}
-      <label class="name">Name
-        <input type="text" name="name">
-      </label>
-      <label class="description">Description
-        <input type="text" name="description">
-      </label>
-      <div class="button-action">
-        <button type="submit" class="create">Create</button>
-        <button type="button" class="cancel">Cancel</button>
-      </div>
-    </form>
-  </div>
-
-  <tbody>
-    {% for department in departments %}
-    <tr>
-      <td>{{ department.name }}</td>
-      <td>
-        <button class="detail-button" href="#">Detail</button>
-        <button class="delete-button" herf="#">Delete</button>
-      </td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+<div class="container mt-3">
+  <h2>Department List</h2>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <div class="form-new" id="formNew" style="display: none;">
+      <form method="post" action="{% url 'create-department' %}" class="mt-3">
+        {% csrf_token %}
+        <h2>New Department</h2>
+        {% if error_message %}
+          <p class="error-message">{{ error_message }}</p>
+        {% endif %}
+        <div class="mb-3">
+          <label for="departmentName" class="form-label">Name</label>
+          <input type="text" class="form-control" id="departmentName"
+            name="name" required>
+        </div>
+        <div class="mb-3">
+          <label for="departmentDescription" class="form-label">Description</label>
+          <input type="text" class="form-control" id="departmentDescription"
+            name="description" required>
+        </div>
+        <div class="button-action">
+          <button type="submit" class="btn btn-primary">Create</button>
+          <button type="button" class="btn btn-secondary cancel">Cancel</button>
+        </div>
+      </form>
+    </div>
+    <tbody>
+      {% for department in departments %}
+      <tr>
+        <td>{{ department.name }}</td>
+        <td>
+          <button class="btn btn-info detail-button" href="#">Detail</button>
+          <button class="btn btn-danger delete-button" href="#">Delete</button>
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
 {% endblock %}
