--- a/django/manager_employees/templates/base.html
+++ b/django/manager_employees/templates/base.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Base</title>
     <link rel="stylesheet" href="{% static 'css/navigator.css' %}" />
+    {%load django_bootstrap5%}
+
+    {%bootstrap_css%}
+
+    {%bootstrap_javascript%}
   </head>
   <body>
     <header class="header">
