--- a/django/manager_employees/departments/templates/list.html
+++ b/django/manager_employees/departments/templates/list.html
@@ -15,28 +15,28 @@
       </tr>
     </thead>
     <div class="form-new" id="formNew" style="display: none;">
-      <form method="post" action="{% url 'create-department' %}" class="mt-3">
+      <form id="createDepartmentForm" method="post" action="{% url 'create-department' %}" class="mt-3">
         {% csrf_token %}
         <h2>New Department</h2>
-        {% if error_message %}
-          <p class="error-message">{{ error_message }}</p>
-        {% endif %}
+        <div id="error-message" class="mb-3">
+        </div>
         <div class="mb-3">
           <label for="departmentName" class="form-label">Name</label>
-          <input type="text" class="form-control" id="departmentName"
-            name="name" required>
+          <input type="text" class="form-control" id="departmentName" name="name" required>
+          <div id="name-error" class="error-message"></div>
         </div>
         <div class="mb-3">
           <label for="departmentDescription" class="form-label">Description</label>
-          <input type="text" class="form-control" id="departmentDescription"
-            name="description" required>
+          <input type="text" class="form-control" id="departmentDescription" name="description" required>
+          <div id="description-error" class="error-message"></div>
         </div>
         <div class="button-action">
-          <button type="submit" class="btn btn-primary">Create</button>
+          <button type="button" class="btn btn-primary" onclick="createDepartment()">Create</button>
           <button type="button" class="btn btn-secondary cancel">Cancel</button>
         </div>
       </form>
     </div>
+    <script src="{% static 'js/form.js' %}"></script>
     <tbody>
       {% for department in departments %}
       <tr>
