--- a/django/manager_employees/departments/templates/list.html
+++ b/django/manager_employees/departments/templates/list.html
@@ -2,25 +2,31 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/actions-button.css' %}">
 
+{% block page_name %}Departments{% endblock %}
+
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/department.css' %}">
+<div class="container mt-3">
   <h2>Department List</h2>
   <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for department in departments %}
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for department in departments %}
         <tr>
           <td>{{ department.name }}</td>
           <td>
-            <button class="detail-button" href="#">Detail</button>
-            <button class="delete-button" herf="#">Delete</button>
+            <button class="btn btn-info detail-button" href="#">Detail</button>
+            <button class="btn btn-danger delete-button" href="#">Delete</button>
           </td>
         </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-{% endblock %}
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+  {% endblock %}
