--- a/django/manager_employees/departments/templates/list.html
+++ b/django/manager_employees/departments/templates/list.html
@@ -1,28 +1,83 @@
 {% extends 'base.html' %} {% load static %}
-
-{% block page_name %}Departments{% endblock %} {% block content %}
-<div class="container mt-3">
-  <h2>Department List</h2>
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for department in departments %}
-      <tr>
-        <td>{{ department.name }}</td>
-        <td>{{ department.description}}</td>
-        <td>
-          <button class="btn btn-info detail-button" href="#">Detail</button>
-          <button class="btn btn-danger delete-button" href="#">Delete</button>
-        </td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+<link rel="stylesheet" href="{% static 'css/list.css.css' %}" />
+{% block content %}
+<!-- Title Bar -->
+<div
+  class="justify-content"
+  style="height: 80px; padding: 20px"
+>
+  <h3 style="font-weight: 700">Departments</h3>
 </div>
+<!-- Card with Table -->
+<div
+  style="
+    background-color: white;
+    padding: 30px;
+    margin: 20px 20px 0 20px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  "
+>
+  <div
+    style="
+      background-color: #EFEFEF;
+      padding: 20px;
+      margin-bottom: 20px;
+      border-radius: 5px;
+      width: 100%;
+    "
+    class="justify-content"
+  >
+    <div class="dropdown">
+      <button
+        class="btn"
+        style="background-color: #fff; border: none"
+        type="button"
+        data-toggle="modal"
+        data-target="#myModalCreate"
+      >
+        Add new +
+      </button>
+      </ul>
+    </div>
+  </div>
+  <div class="table-responsive">
+    <table class="table rounded" style="width: 100%">
+      <thead class="table-secondary">
+        <tr>
+          <th scope="col-3">Name</th>
+          <th scope="col-3">Description</th>
+          <th scope="col-3" style="width: 20%">Action</th>
+        </tr>
+      </thead>
+      <tbody>
+      {% for department in departments %}
+        <tr>
+          <td>{{department.name}}</td>
+          <td>{{department.description}}</td>
+          <td>
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-toggle="modal"
+              data-target="#myModalEdit"
+            >
+              Details
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger"
+              data-toggle="modal"
+              data-target="#myModalDelete"
+            >
+              Delete
+            </button>
+          </td>
+        </tr>
+      {%endfor %}
+      </tbody>
+    </table>
+  </div>
+</div>
+
 {% endblock %}
