--- a/django/manager_employees/templates/base.html
+++ b/django/manager_employees/templates/base.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 {% load static %}
-
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Base</title>
     <link rel="stylesheet" href="{% static 'css/navigator.css' %}" />
-    {% load django_bootstrap5 %}
-
-    {% bootstrap_css %}
-
-    {% bootstrap_javascript %}
+    <link
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
   </head>
   <body>
     <header class="header">
       <div class="header-wrapper">
+        {% csrf_token %}
         <p class="header-notify">Hi, {{ user.username }}!</p>
         <form method="post" action="{% url 'user_logout' %}">
           {% csrf_token %}
@@ -24,7 +33,7 @@
       </div>
     </header>
     <!-- SIDEBAR -->
-    <main class="container-page">
+    <div class="body-container">
       <nav class="sidebar">
         <ul class="sidebar-list">
           <li
@@ -35,20 +44,15 @@
           <li class="sidebar-item">
             <a class="item-link" href="#">Contacts</a>
           </li>
-          <li class="sidebar-item">
+          <li
+            class="sidebar-item {% if context.current_page == 'employees' %}active{% endif %}"
+          >
             <a class="item-link" href="#">Employees</a>
           </li>
         </ul>
       </nav>
       <!-- CONTENT-->
-      <div class="content">
-        <div class="page-bar">
-          <p class="page-name">{% block page_name %}{% endblock %}</p>
-          <button class="add-button">Add New</button>
-        </div>
-        {% block content %}{% endblock %}
-      </div>
-    </main>
-    <script src="{% static 'js/index.js' %}"></script>
+      <div class="content">{% block content %}{% endblock %}</div>
+    </div>
   </body>
 </html>
