--- a/django/manager_employees/departments/templates/list.html
+++ b/django/manager_employees/departments/templates/list.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% load static %}
-<link rel="stylesheet" href="{% static 'css/list.css.css' %}" />
+<link rel="stylesheet" href="{% static 'css/department.css' %}" />
 
 {% block content %}
 
@@ -74,6 +74,44 @@
       {%endfor %}
       </tbody>
     </table>
+  </div>
+</div>
+
+<!-- Modal Create -->
+<div class="modal" id="myModalCreate">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">New</h4>
+        <button type="button" class="close" data-dismiss="modal">
+          &times;
+        </button>
+      </div>
+
+      <!-- Modal body -->
+      <div class="modal-body">
+        <form id="myForm" method="post" action="{% url 'create_department' %}">
+          {% csrf_token %}
+          <div class="form-group">
+            <label for="inputName">Name</label>
+            <input type="text" class="form-control" id="inputName" name="name" placeholder="Enter Name" onfocus="clearErrorMessageName();">
+            <div id="error-message_name" style="color: red;"></div>
+          </div>
+          <div class="form-group">
+            <label for="inputDescription">Description</label>
+            <input type="text" class="form-control" id="inputDescription" name="description" placeholder="Enter Description" onfocus="clearErrorMessageDes();">
+            <div id="error-message_description" style="color: red;"></div>
+          </div>
+          <div class="modal-footer">
+            <button type="submit" id="submitBtn" class="btn btn-primary">Create</button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">
+              Close
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
 </div>
 
