--- a/django/manager_employees/departments/templates/list.html
+++ b/django/manager_employees/departments/templates/list.html
@@ -2,14 +2,15 @@
 <link rel="stylesheet" href="{% static 'css/department.css' %}" />
 
 {% block content %}
-
+<!-- Title Bar -->
 <div
-  class="justify-content"
+  class="d-flex justify-content-between align-items-center bg-white rounded"
   style="height: 80px; padding: 20px"
 >
   <h3 style="font-weight: 700">Departments</h3>
 </div>
 
+<!-- Card with Table -->
 <div
   style="
     background-color: white;
@@ -21,13 +22,13 @@
 >
   <div
     style="
-      background-color: #EFEFEF;
+      background-color: #efefef;
       padding: 20px;
       margin-bottom: 20px;
       border-radius: 5px;
       width: 100%;
     "
-    class="justify-content"
+    class="d-inline-flex justify-content-start align-items-center"
   >
     <div class="dropdown">
       <button
@@ -41,31 +42,41 @@
       </button>
       </ul>
     </div>
+
+    {% comment %} date picker {% endcomment %}
   </div>
+
   <div class="table-responsive">
     <table class="table rounded" style="width: 100%">
       <thead class="table-secondary">
         <tr>
+          {% comment %} <th scope="col-3">ID</th> {% endcomment %}
           <th scope="col-3">Name</th>
           <th scope="col-3">Description</th>
-          <th scope="col-3" style="width: 20%">Action</th>
+          <th scope="col-3" style="width: 20%"></th>
         </tr>
       </thead>
       <tbody>
       {% for department in departments %}
         <tr>
+          {% comment %} <th scope="row">{{department.id}}</th> {% endcomment %}
           <td>{{department.name}}</td>
           <td>{{department.description}}</td>
           <td>
             <button
               type="button"
               class="btn btn-primary"
+              data-toggle="modal"
+              data-target="#myModalEdit"
+              onclick="showDepartmentDetails('{{ department.id }}')"
             >
               Details
             </button>
             <button
               type="button"
               class="btn btn-danger"
+              data-toggle="modal"
+              data-target="#myModalDelete"
             >
               Delete
             </button>
@@ -91,7 +102,7 @@
 
       <!-- Modal body -->
       <div class="modal-body">
-        <form id="myForm" method="post" action="{% url 'create_department' %}">
+        <form id="myForm" method="post" action="{% url 'departments' %}">
           {% csrf_token %}
           <div class="form-group">
             <label for="inputName">Name</label>
@@ -101,10 +112,59 @@
           <div class="form-group">
             <label for="inputDescription">Description</label>
             <input type="text" class="form-control" id="inputDescription" name="description" placeholder="Enter Description" onfocus="clearErrorMessageDes();">
+            {% comment %} Warning {% endcomment %}
             <div id="error-message_description" style="color: red;"></div>
           </div>
           <div class="modal-footer">
-            <button type="submit" id="submitBtn" class="btn btn-primary">Create</button>
+            <button type="submit" id="submitBtn" class="btn btn-primary">
+              Create
+            </button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">
+              Close
+            </button>
+          </div>
+        </form> 
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- Modal Edit -->
+<div class="modal" id="myModalEdit">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">Detail</h4>
+        <button type="button" class="close" data-dismiss="modal">
+          &times;
+        </button>
+      </div>
+
+      <!-- Modal body -->
+      <div class="modal-body">
+        <form id="myFormEdit" method="get" action="{% if department.id %}{% url 'department_detail' department_id=department.id %}{% endif %}">
+          <div class="form-group">
+            <label>ID</label>
+            <input type="text" class="form-control" id="departmentID" value="" readonly>
+          </div>
+          <div class="form-group">
+            <label>Create at</label>
+            <input type="text" class="form-control" id="departmentTime" value="" readonly>
+          </div>
+          <div class="form-group">
+            <label>Name</label>
+            <input type="text" class="form-control" id="editNameDepartment" name="name" value="">
+          </div>
+          <div class="form-group">
+            <label>Description</label>
+            <input type="text" class="form-control" id="editDescription" name="description" value="">
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal", onclick="saveDepartmentDetails()">
+              Save
+            </button>
             <button type="button" class="btn btn-danger" data-dismiss="modal">
               Close
             </button>
@@ -114,5 +174,30 @@
     </div>
   </div>
 </div>
+
+
+<!-- Modal Delete -->
+<div class="modal" id="myModalDelete">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <!-- Modal body -->
+      <div class="modal-body">
+        <h3>You want to delete this department!</h3>
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">
+          Cancel
+        </button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal">
+          Delete
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 {% endblock %}
