--- a/django/manager_employees/departments/templates/list.html
+++ b/django/manager_employees/departments/templates/list.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %} {% load static %}
 <link rel="stylesheet" href="{% static 'css/department.css' %}" />
-
 {% block content %}
 <!-- Title Bar -->
 <div
@@ -9,7 +8,6 @@
 >
   <h3 style="font-weight: 700">Departments</h3>
 </div>
-
 <!-- Card with Table -->
 <div
   style="
@@ -22,7 +20,7 @@
 >
   <div
     style="
-      background-color: #efefef;
+      background-color: #EFEFEF;
       padding: 20px;
       margin-bottom: 20px;
       border-radius: 5px;
@@ -42,10 +40,8 @@
       </button>
       </ul>
     </div>
-
     {% comment %} date picker {% endcomment %}
   </div>
-
   <div class="table-responsive">
     <table class="table rounded" style="width: 100%">
       <thead class="table-secondary">
@@ -66,9 +62,7 @@
             <button
               type="button"
               class="btn btn-primary"
-              data-toggle="modal"
-              data-target="#myModalEdit"
-              onclick="showDepartmentDetails('{{ department.id }}')"
+              onclick="window.location.href='{% url 'department_detail' department.id %}'"
             >
               Details
             </button>
@@ -87,7 +81,6 @@
     </table>
   </div>
 </div>
-
 <!-- Modal Create -->
 <div class="modal" id="myModalCreate">
   <div class="modal-dialog">
@@ -99,7 +92,6 @@
           &times;
         </button>
       </div>
-
       <!-- Modal body -->
       <div class="modal-body">
         <form id="myForm" method="post" action="{% url 'departments' %}">
@@ -123,28 +115,24 @@
               Close
             </button>
           </div>
-        </form> 
+        </form>
       </div>
     </div>
   </div>
 </div>
-
-
 <!-- Modal Edit -->
 <div class="modal" id="myModalEdit">
   <div class="modal-dialog">
     <div class="modal-content">
-      <!-- Modal Header -->
       <div class="modal-header">
         <h4 class="modal-title">Detail</h4>
         <button type="button" class="close" data-dismiss="modal">
           &times;
         </button>
       </div>
-
-      <!-- Modal body -->
       <div class="modal-body">
-        <form id="myFormEdit" method="get" action="{% if department.id %}{% url 'department_detail' department_id=department.id %}{% endif %}">
+        <form id="myFormEdit" method="patch">
+          {% csrf_token %}
           <div class="form-group">
             <label>ID</label>
             <input type="text" class="form-control" id="departmentID" value="" readonly>
@@ -162,30 +150,22 @@
             <input type="text" class="form-control" id="editDescription" name="description" value="">
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal", onclick="saveDepartmentDetails()">
-              Save
-            </button>
-            <button type="button" class="btn btn-danger" data-dismiss="modal">
-              Close
-            </button>
+            <button type="submit" class="btn btn-primary">Save</button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
           </div>
         </form>
       </div>
     </div>
   </div>
 </div>
-
-
 <!-- Modal Delete -->
 <div class="modal" id="myModalDelete">
   <div class="modal-dialog">
     <div class="modal-content">
-
       <!-- Modal body -->
       <div class="modal-body">
         <h3>You want to delete this department!</h3>
       </div>
-
       <!-- Modal footer -->
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" data-dismiss="modal">
@@ -198,6 +178,5 @@
     </div>
   </div>
 </div>
-
 
 {% endblock %}
