--- a/django/manager_employees/departments/templates/list.html
+++ b/django/manager_employees/departments/templates/list.html
@@ -8,16 +8,16 @@
 >
   <h3 style="font-weight: 700">Departments</h3>
   <button
-        class="btn"
-        style="background-color: #dee2e6; 
-        border: none"
-        boder-radius: 4px;
-        type="button"
-        data-toggle="modal"
-        data-target="#myModalCreate"
-      >
-        Add new +
-      </button>
+    class="btn"
+    style="background-color: #dee2e6; border: none"
+    boder-radius:
+    4px;
+    type="button"
+    data-toggle="modal"
+    data-target="#myModalCreate"
+  >
+    Add new +
+  </button>
 </div>
 <!-- Card with Table -->
 <div
@@ -29,30 +29,27 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   "
 >
-  <div
-  
-    class="d-inline-flex justify-content-start align-items-center"
-  >
-    <div class="dropdown">
-      
-    
-    </div>
-   
+  <div class="d-inline-flex justify-content-start align-items-center">
+    <div class="dropdown"></div>
   </div>
   <div class="table-responsive">
     <table class="table rounded" style="width: 100%">
       <thead class="table-secondary">
         <tr>
-          {% comment %} <th scope="col-3">ID</th> {% endcomment %}
+          {% comment %}
+          <th scope="col-3">ID</th>
+          {% endcomment %}
           <th scope="col-3">Name</th>
           <th scope="col-3">Description</th>
           <th scope="col-3" style="width: 20%"></th>
         </tr>
       </thead>
       <tbody>
-      {% for department in departments %}
+        {% for department in departments %}
         <tr>
-          {% comment %} <th scope="row">{{department.id}}</th> {% endcomment %}
+          {% comment %}
+          <th scope="row">{{department.id}}</th>
+          {% endcomment %}
           <td>{{department.name}}</td>
           <td>{{department.description}}</td>
           <td>
@@ -68,16 +65,41 @@
               class="btn btn-danger"
               data-toggle="modal"
               data-target="#myModalDelete"
-              {% comment %} onclick="setDeleteDepartmentId('{{ department.id }}')" {% endcomment %}
+              {%
+              comment
+              %}
+              onclick="setDeleteDepartmentId('{{ department.id }}')"
+              {%
+              endcomment
+              %}
             >
               Delete
             </button>
           </td>
         </tr>
-      {%endfor %}
+        {%endfor %}
       </tbody>
     </table>
   </div>
+
+    <!-- Pagination -->
+    <div class="pagination">
+      <span class="step-links">
+        {% if departments.has_previous %}
+          <a href="?page=1">&laquo; first</a>
+          <a href="?page={{ departments.previous_page_number }}">previous</a>
+        {% endif %}
+  
+        <span class="current">
+          Page {{ departments.number }} of {{ departments.paginator.num_pages }}.
+        </span>
+  
+        {% if departments.has_next %}
+          <a href="?page={{ departments.next_page_number }}">next</a>
+          <a href="?page={{ departments.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+      </span>
+    </div>
 </div>
 <!-- Modal Create -->
 <div class="modal" id="myModalCreate">
@@ -96,14 +118,28 @@
           {% csrf_token %}
           <div class="form-group">
             <label for="inputName">Name</label>
-            <input type="text" class="form-control" id="inputName" name="name" placeholder="Enter Name" onfocus="clearErrorMessageName();">
-            <div id="error-message_name" style="color: red;"></div>
+            <input
+              type="text"
+              class="form-control"
+              id="inputName"
+              name="name"
+              placeholder="Enter Name"
+              onfocus="clearErrorMessageName();"
+            />
+            <div id="error-message_name" style="color: red"></div>
           </div>
           <div class="form-group">
             <label for="inputDescription">Description</label>
-            <input type="text" class="form-control" id="inputDescription" name="description" placeholder="Enter Description" onfocus="clearErrorMessageDes();">
+            <input
+              type="text"
+              class="form-control"
+              id="inputDescription"
+              name="description"
+              placeholder="Enter Description"
+              onfocus="clearErrorMessageDes();"
+            />
             {% comment %} Warning {% endcomment %}
-            <div id="error-message_description" style="color: red;"></div>
+            <div id="error-message_description" style="color: red"></div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-danger" data-dismiss="modal">
@@ -132,7 +168,11 @@
         <button type="button" class="btn btn-primary" data-dismiss="modal">
           Cancel
         </button>
-        <button type="button" class="btn btn-danger" onclick="myConfirmDelete()">
+        <button
+          type="button"
+          class="btn btn-danger"
+          onclick="myConfirmDelete()"
+        >
           Delete
         </button>
       </div>
